--- a/telas/tela1/tela.css
+++ b/telas/tela1/tela.css
@@ -1,45 +1,149 @@
+@import "../../css/fonts.css";
 
-body{padding: 0px; margin: 0px;}
+
+body{
+    padding: 0px; margin: 0px;
+    font-family: 'Simplon BP Regular', sans-serif;
+}
 
 a{outline:none;}
 
 #fundo{display: none; position:absolute;}
 
+#elementos_tela{
+    width: auto;
+}
+
 #area {
-display: block;
-position: relative;
-width: 100%;
-height: 100%;
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 300px;
+
+    position: absolute;
+    height: 505px;
+    top: 58px;
 }
 
 
-#aparece0{
-top:0px;
-left:0px;	
+.header{
+    display: inline-block;
+    padding: 15px 15px 15px 150px;
+
+    background-color: #009E0B;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    color: #fff;
+    font-size: 26px;
+
 }
 
-#seta_v{
-top:215px;
-left:20px;
-z-index:100;
-cursor:pointer;	
+.subTitle{
+    position: absolute;
+
+    left: 55px;
+    top: 80px;
+
+    color: #0a0a0a;
+    font-size: 18px;
 }
 
-#seta_a{
-cursor: pointer;
-left: 615px;
-top: 215px;
-z-index: 100;
+.elementos-botoes{
+    padding: 0;
+    display: inline-block;
+    position: absolute;
+    left: 250px;
+    top: -50px;
+}
+
+.elementos-botoes li{
+    list-style: none;
+}
+
+.elementos-item{
+    margin: 10px;
+}
+
+.elementos-item a{
+    
+    padding: 10px;
+    background-color: #009E0B;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 16px;
+    min-width: 30px;
+    display: inline-block;
+    text-align: center;
+}
+
+.conteudo{
+
+    display: none;
+    position: absolute;
+
+    width: 300px;
+
+    padding: 10px;
+
+    background-color: #009E0B;
+
+}
+
+.conteudo::after{
+    content: ' ';
+    background-color: #009E0B;
+    height: 39px;
+    width: 58px;
+    display: inline-block;
+    position: absolute;
+    top: 0px;
+    left: -58px;
+}
+
+.conteudo0{
+    top: 90px;
+    left: 360px;
+}
+
+.conteudo1{
+    top: 138px;
+    left: 360px;
+}
+
+.conteudo2{
+    top: 187px;
+    left: 360px;
+}
+
+.conteudo3{
+    top: 235px;
+    left: 360px;
+}
+
+.conteudo4{
+    top: 284px;
+    left: 360px;
 }
 
 
-#video_tela{
-background-color: #000;
-border: 4px solid #ffffff;
-cursor: pointer;
-height: 438px;
-left: 88px;
-top: -37px;
-width: 777px;
-z-index: 50;
+.conteudo h3{
+    margin: 5px 0px;
+    color: #fff;
+}
+
+.conteudo p{
+    color: #fff;
+}
+
+.message{
+    position: absolute;
+    display: inline-block;
+
+    bottom: 15px;
+    right: 15px;
+
+    padding: 10px 15px;
+
+    background-color: #009E0B;
+    color: #fff;
 }
